fix button spacing on results page

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -191,6 +191,10 @@ a:hover {
   width: 100%;
 }
 
+.dropdown button {
+  width: 100%;
+}
+
 .chart-background {
   background-color: rgba(255, 255, 255, 0.568);
   border-radius: 4px;
